--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --prod"
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
+    
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/animations": "~7.2.0",
     "@angular/cli": "~7.2.3",
@@ -33,6 +34,8 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular/cli": "^1.4.9",
+    "@angular/compiler-cli": "^4.4.6",
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
@@ -49,6 +52,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "typescript": "~3.2.2",
     "tslint": "~5.11.0"
   },
   "engines": {
